--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
   if (!userId || !kode) return alert("⚠️ Lengkapi ID dan kupon dulu!");
   if (usedCoupons.has(kode)) return alert("⛔ Kupon ini sudah dipakai!");
 
-  fetch(`http://127.0.0.1:3000/check-kupon?kode=${kode}&user=${userId}`)
+  fetch(`/api/check-kupon?kode=${kode}&user=${userId}`)
     .then(res => res.json())
     .then(data => {
       if (!data.valid) {
@@ -470,7 +470,7 @@
   const userId = document.getElementById("user-id")?.value.trim();
   const kode = document.getElementById("kupon")?.value.trim();
 
-  fetch("http://127.0.0.1:3000/log-spin", {
+  fetch("/api/log-spin", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
