--- a/index.html
+++ b/index.html
@@ -470,17 +470,24 @@
   const userId = document.getElementById("user-id")?.value.trim();
   const kode = document.getElementById("kupon")?.value.trim();
 
-  fetch("/api/log-spin", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
+  fetch("/api/check-kupon", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ kode, user: userId })
+})
+  .then(res => res.json())
+  .then(data => {
+    if (!data.valid) {
+      alert("❌ Gagal log spin: " + data.msg);
+      return;
+    }
+
+    // lanjutkan logic kalau sukses
+    console.log("✅ Spin berhasil dicatat!");
   })
-    .then(res => res.json())
-    .then(data => {
-      if (!data.success) {
-        alert("❌ Gagal log spin: " + data.msg);
-        return;
-      }
+  .catch(err => {
+    alert("❌ Gagal terhubung ke server: " + err.message);
+  });
 
       // Efek menang
       setTimeout(() => {
